--- a/code/figure3.Rmd
+++ b/code/figure3.Rmd
@@ -161,21 +161,23 @@ effect_heatmap$discrete_color <- factor(effect_heatmap$discrete_color, levels = 
 save(effect_heatmap, file = "effect_heatmap.Rda")
 ```
 
-```{r group-pathway-enrichment heatmap, fig.cap="**Figure 3. Pathway-specific enrichment within clusters.** Heatmap shows relative enrichment of each pathway (rows) within each numbered cluster (columns). The annotation at left indicates the Reactome pathway group at the second level (check this)."}
+```{r group-pathway-enrichment heatmap, fig.width= 5, fig.height= 10, fig.align= 'center', fig.cap="**Figure 3. Pathway-specific enrichment within clusters.** Heatmap shows relative enrichment of each pathway (rows) within each numbered cluster (columns). The annotation at left indicates the Reactome pathway group at the second level (check this)."}
 load("../data/effect_heatmap.Rda") ## load data
-
+effect_heatmap$test <- 1
+class(effect_heatmap$cluster)
 effect_colors = c("1" = "#2d004b", "2" = "#542788", "3" = "#8073ac", "4" = "#b2abd2", "5" = "#d8daeb", "6" = "white", "7" = "#fee0b6", "8" = "#fdb863", "9" = "#e08214","10" = "#b35806","11" ="#7f3b08") ## color scheme
 
 fig3 <- ggplot(data = effect_heatmap, aes(x=cluster, y=path_name)) + 
   geom_tile(size = 0.6, aes(fill = discrete_color)) +
   scale_fill_manual(values = effect_colors) +
-  theme(axis.text.x = element_text(size = 12),
+  ylab("377 Reactome Pathways") +
+  xlab("Cluster") +
+  theme(axis.text.x = element_text(size = 10),
         axis.text.y = element_blank(),
         axis.title.x = element_text(size = 12),
         axis.title.y = element_text(size = 12),
         axis.ticks = element_blank(),
         legend.position = "none")
-
 fig3_legend <- ggplot(data = data.frame(x = 1:11, y = 1), aes(x = x, y = y, fill = as.factor(x))) +
   geom_bar(stat = "identity", width = 1) +
   theme_classic() +
@@ -188,18 +190,26 @@ fig3_legend <- ggplot(data = data.frame(x = 1:11, y = 1), aes(x = x, y = y, fill
         axis.title.y = element_blank(),
         axis.line = element_blank())
 
-## setting patchwork panel layout
-layout <- '
-AAAAA
-AAAAA
-AAAAA
-AAAAA
-AAAAA
-AAAAA
-AAAAA
-AAAAA
-#BBB#
-'
+# ## setting patchwork panel layout
+# layout <- '
+# AAAAA
+# AAAAA
+# AAAAA
+# AAAAA
+# AAAAA
+# AAAAA
+# AAAAA
+# AAAAA
+# AAAAA
+# AAAAA
+# AAAAA
+# AAAAA
+# #BBB#
+# '
+# 
+# fig3 + fig3_legend + plot_layout(design = layout)
 
-fig3 + fig3_legend + plot_layout(design = layout)
+fig3_legend <- plot_grid(NULL, fig3_legend, NULL, ncol = 3)
+
+plot_grid(fig3, fig3_legend, ncol = 1, rel_heights = c(15, 1))
 ```
