--- a/text/references.bib
+++ b/text/references.bib
@@ -411,3 +411,21 @@
   pmid = {25613900},
   doi = {10.1126/science.1260419}
 }
+
+@article{noncoding-mutations-Zhang,
+  author = {Zhang, Y. and Xiao, Y. and Yang, M. and Ma, J.},
+  title = {Cancer mutational signatures representation by large-scale context embedding},
+  journal = {Bioinformatics},
+  doi = {10.1093/bioinformatics/btaa433},
+  pmid = {32657413}
+}
+
+@article{bhowmick_review,
+  author = {Tripathi, M. and Billet, S. and Bhowmick, N.A.},
+  title = {Understanding the role of stromal fibroblasts in cancer progression},
+  journal = {Cell Adhesion & migration},
+  volume = {6},
+  number = {3},
+  pages = {231--235},
+  pmid = {22568983}
+}
