--- a/text/references.bib
+++ b/text/references.bib
@@ -424,8 +424,19 @@
   author = {Tripathi, M. and Billet, S. and Bhowmick, N.A.},
   title = {Understanding the role of stromal fibroblasts in cancer progression},
   journal = {Cell Adhesion & migration},
+  year = {2012},
   volume = {6},
   number = {3},
   pages = {231--235},
   pmid = {22568983}
+}
+
+@article{knott_asparagus,
+  author = {Knott, S.R.V. and Wagenblast, E. and Khan, S. and Kim, S.Y. and Soto, M. and Wagner, M. and Turgeon, M. and Fish, L. and Erard, N. and Gable, A.L. and Maceli, A.R. and Dickopf, S. and Papachristou, E.K. and D’Santos, C.S. and Carey, L.A. and Wilkinson, J.E. and Harrell, J.C. and Perou, C.M. and Goodarzi, H. and Poulogiannis G. and Hannon, G.J.},
+  title = {Asparagine bioavailability governs metastasis in a model of breast cancer},
+  journal = {Nature},
+  volume = {554},
+  pages = {378--381},
+  year = {2018},
+  pmid = {29414946}
 }
